# django-rest-pandas

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  README.rst.patch  babel.config.cjs  babel.config.js  jest.config.cjs  jest.config.js  package-lock.json  package.json  pyproject.toml  runserver.sh  runtests.sh  set_dev_version.sh  setup.py
.github/workflows/: pages.yml  test.yml
docs/: CNAME  _config.yml  config.md  index.md  license.md  packages.md  support.md
docs/@wq/: analyst.md  chart.md  index.md  pandas.md
docs/_layouts/: default.html
docs/api/: PandasMixin.md  PandasSimpleView.md  PandasView.md  PandasViewSet.md  custom.md  index.md
docs/guides/: index.md  integrate-with-wq-framework.md  use-with-django-pandas.md
docs/js/: $index.js  demo.js
docs/overview/: index.md  related-work.md  setup.md
docs/releases/: django-rest-pandas-0.1.0.md  django-rest-pandas-0.1.1.md  django-rest-pandas-0.2.0.md  django-rest-pandas-0.2.1.md  django-rest-pandas-0.3.0.md  django-rest-pandas-0.3.1.md  django-rest-pandas-0.3.2.md  django-rest-pandas-0.4.0.md  django-rest-pandas-0.4.1.md  django-rest-pandas-0.5.0.md  django-rest-pandas-1.0.0.md  django-rest-pandas-1.1.0.md  index.md
docs/renderers/: csv.md  html.md  index.md  json.md  png.md  svg.md  txt.md  xls.md  xlsx.md
docs/serializers/: $index.json  PandasBoxplotSerializer.md  PandasScatterSerializer.md  PandasSerializer.md  PandasUnstackedSerializer.md  index.md
rest_pandas/: __init__.py  renderers.py  serializers.py  settings.py  test.py  views.py
rest_pandas/mustache/: rest_pandas.html
rest_pandas/static/app/: .sha256
tests/: __init__.py  data.csv  generate_docs.py  runtests.py  settings.py  test_complex.py  test_excel.py  test_images.py  test_multi.py  test_views.py  urls.py
tests/files/: multitimeseries.html  timeseries.html
tests/testapp/: models.py  renderers.py  serializers.py  tests.py  urls.py  views.py
tests/weather/: models.py  serializers.py  urls.py  views.py
(+5 files in other folders)
